@@ -34,7 +34,12 @@ class BlcParsers extends BlcModule
 
     protected function init()
     {
-        PluginHelper::importPlugin('blc'); //no need to load the plugins everytime
+        try {
+            //only helps partially, since symfony catches fatals.
+            PluginHelper::importPlugin('blc'); //no need to load the plugins everytime
+         } catch (Error)  {
+             $this->getApplication()->enqueueMessage( 'unable to load BLC plugins, please ensure everything is updated','error');
+         }
         //TODO hoe de database netjes
         parent::init();
         $arguments = [
