@@ -54,7 +54,12 @@ class ExtractCommand extends AbstractCommand
 
     protected function doExecute(InputInterface $input, OutputInterface $output): int
     {
-        PluginHelper::importPlugin('blc'); //no need to load the plugins everytime
+        try {
+            //only helps partially, since symfony catches fatals.
+            PluginHelper::importPlugin('blc'); //no need to load the plugins everytime
+         } catch (Error)  {
+             $this->getApplication()->enqueueMessage( 'unable to load BLC plugins, please ensure everything is updated','error');
+         }
         $this->configureIO($input, $output);
 
         $this->ioStyle->title('Extractor for BLC');
